fix(entcore): repointe entCoreVersion/entCoreLibsVersion sur 6.14.9-patched
Le pom pointait sur 6.16.1 (version upstream générique) au lieu de la
version entcore réellement patchée de ce fork. Révèle au passage un vrai
bug de compatibilité JDK 8 : List.of(String,String,String) (Java 9+)
n'existe pas sous le maven:3.8.6-jdk-8 utilisé pour builder ce module ->
remplacé par Arrays.asList (ALLOWED_DOCUMENT_TYPES, DocumentsController).